--- a/src/app/shared/components/poker-chip/poker-chip.component.html
+++ b/src/app/shared/components/poker-chip/poker-chip.component.html
@@ -1,6 +1,6 @@
 <app-avatar-field
   urlImage="/svgs/poker-chip.svg"
   icon=""
-  [variant]="AvatarFieldVariantEnum.Icon"
-  [size]="AvatarFieldSizeEnum.Large"
+  [variant]="variant"
+  [size]="size"
 />
