feat: add grid areas in poker-table :sparkles:

--- a/src/app/shared/components/poker-table/poker-table.component.html
+++ b/src/app/shared/components/poker-table/poker-table.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-  <div class="poker-table">
-    Start Game
+  <div class="top">Top</div>
+  <div class="left">Left</div>
+  <div class="center">
+    <div class="container-poker-table">
+      <div class="poker-table">
+        Start Game
+      </div>
+    </div>
   </div>
+  <div class="right">Right</div>
+  <div class="bottom">Bottom</div>
 </div>
