--- a/src/app/shared/components/poker-table/poker-table.component.scss
+++ b/src/app/shared/components/poker-table/poker-table.component.scss
@@ -2,53 +2,86 @@
 @use 'colors' as colors;
 
 $positioned: 10px;
-$padding-overlap: calc($positioned * 4);
+
 .container {
-  display: flex;
-  width: 100%;
+  display: grid;
   max-width: 80vw;
-  margin: 4rem auto;
-  padding-top: $padding-overlap;
-  padding-bottom: $padding-overlap;
+  margin: 0 auto;
+  grid-template-columns: 1fr 2fr 2fr 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    "top top top top"
+    "left center center right"
+    "bottom bottom bottom bottom";
+  gap: 10px;
 
+  .top {
+    grid-area: top;
+  }
 
-  .poker-table {
-    display: grid;
-    place-content: center;
-    position: relative;
-    z-index: 10;
-    width: 600px;
-    height: 345px;
-    margin: auto;
-    background-color: colors.$pds-color-primary-purple-900-opacity-600;
-    border: 1px solid colors.$pds-color-primary-purple-500;
-    border-radius: borderRadius.$pds-border-radius-full;
+  .left {
+    grid-area: left;
+  }
 
-    &::before, &::after {
-      content: "";
-      position: absolute;
-      border-radius: inherit;
-      user-select: none;
-      pointer-events: none;
-      border: 2px solid currentColor;
-    }
+  .center {
+    grid-area: center;
+  }
 
-    &::before {
-      z-index: -10;
-      inset: calc($positioned * -2);
-      border-color: colors.$pds-color-primary-indigo-500-opacity-600;
-      box-shadow:
-        0px 0px 2px 0px colors.$pds-color-primary-indigo-500-opacity-600 inset,
-        0px 0px 1px 0px colors.$pds-color-primary-purple-500-opacity-600;
-    }
+  .right {
+    grid-area: right;
+  }
 
-    &::after {
-      z-index: -20;
-      inset: calc($positioned * -4);
-      border-color: colors.$pds-color-primary-purple-500;
-      box-shadow:
-        0px 0px 1px 0px colors.$pds-color-primary-indigo-500-opacity-200 inset,
-        0px 0px 5px 0px colors.$pds-color-primary-purple-500;
+  .bottom {
+    grid-area: bottom;
+  }
+
+  .top, .left, .center, .right, .bottom {
+    border: 1px solid darkblue;
+  }
+
+  .container-poker-table {
+    display: flex;
+    width: 100%;
+
+    .poker-table {
+      display: grid;
+      place-content: center;
+      position: relative;
+      z-index: 10;
+      width: 100%;
+      height: 345px;
+      margin: auto;
+      background-color: colors.$pds-color-primary-purple-900-opacity-600;
+      border: 1px solid colors.$pds-color-primary-purple-500;
+      border-radius: borderRadius.$pds-border-radius-full;
+      transform: scale(0.8);
+
+      &::before, &::after {
+        content: "";
+        position: absolute;
+        border-radius: inherit;
+        user-select: none;
+        pointer-events: none;
+        border: 2px solid currentColor;
+      }
+
+      &::before {
+        z-index: -10;
+        inset: calc($positioned * -2);
+        border-color: colors.$pds-color-primary-indigo-500-opacity-600;
+        box-shadow:
+          0px 0px 2px 0px colors.$pds-color-primary-indigo-500-opacity-600 inset,
+          0px 0px 1px 0px colors.$pds-color-primary-purple-500-opacity-600;
+      }
+
+      &::after {
+        z-index: -20;
+        inset: calc($positioned * -4);
+        border-color: colors.$pds-color-primary-purple-500;
+        box-shadow:
+          0px 0px 1px 0px colors.$pds-color-primary-indigo-500-opacity-200 inset,
+          0px 0px 5px 0px colors.$pds-color-primary-purple-500;
+      }
     }
   }
 }
