--- a/src/app/shared/components/poker-table/poker-table.component.scss
+++ b/src/app/shared/components/poker-table/poker-table.component.scss
@@ -2,10 +2,11 @@
 @use 'colors' as colors;
 
 $positioned: 10px;
+$heightGridAreaTop: 96px;
 
 .container {
   display: grid;
-  max-width: 80vw;
+  max-width: 90vw;
   margin: 0 auto;
   grid-template-columns: 1fr 2fr 2fr 1fr;
   grid-template-rows: auto 1fr auto;
@@ -14,34 +15,53 @@ $positioned: 10px;
     "left center center right"
     "bottom bottom bottom bottom";
   gap: 10px;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
 
   .top {
     grid-area: top;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    column-gap: 90px;
   }
 
   .left {
     grid-area: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    padding-top: $heightGridAreaTop;
+    padding-bottom: $heightGridAreaTop;
+    row-gap: 40px;
   }
 
   .center {
     grid-area: center;
+    padding: 1rem;
   }
 
   .right {
+    @extend .left;
     grid-area: right;
+    align-items: flex-start;
   }
 
   .bottom {
+    @extend .top;
     grid-area: bottom;
   }
 
   .top, .left, .center, .right, .bottom {
-    border: 1px solid darkblue;
+    border: 1px solid transparent;
   }
 
   .container-poker-table {
     display: flex;
     width: 100%;
+    height: 100%;
 
     .poker-table {
       display: grid;
@@ -49,12 +69,14 @@ $positioned: 10px;
       position: relative;
       z-index: 10;
       width: 100%;
-      height: 345px;
+      min-height: 345px;
+      height: 100%;
       margin: auto;
-      background-color: colors.$pds-color-primary-purple-900-opacity-600;
-      border: 1px solid colors.$pds-color-primary-purple-500;
       border-radius: borderRadius.$pds-border-radius-full;
-      transform: scale(0.8);
+      border: 2px solid colors.$pds-color-primary-purple-500;
+      box-shadow:
+        0px 0px 1px 0px colors.$pds-color-primary-indigo-500-opacity-200 inset,
+        0px 0px 5px 0px colors.$pds-color-primary-purple-500;
 
       &::before, &::after {
         content: "";
@@ -67,8 +89,8 @@ $positioned: 10px;
 
       &::before {
         z-index: -10;
-        inset: calc($positioned * -2);
-        border-color: colors.$pds-color-primary-indigo-500-opacity-600;
+        inset: calc($positioned * 2);
+        border: 2px solid colors.$pds-color-primary-indigo-500-opacity-600;
         box-shadow:
           0px 0px 2px 0px colors.$pds-color-primary-indigo-500-opacity-600 inset,
           0px 0px 1px 0px colors.$pds-color-primary-purple-500-opacity-600;
@@ -76,11 +98,9 @@ $positioned: 10px;
 
       &::after {
         z-index: -20;
-        inset: calc($positioned * -4);
-        border-color: colors.$pds-color-primary-purple-500;
-        box-shadow:
-          0px 0px 1px 0px colors.$pds-color-primary-indigo-500-opacity-200 inset,
-          0px 0px 5px 0px colors.$pds-color-primary-purple-500;
+        inset: calc($positioned * 4);
+        background-color: colors.$pds-color-primary-purple-900-opacity-600;
+        border: 1px solid colors.$pds-color-primary-purple-500;
       }
     }
   }
