--- a/src/app/shared/components/poker-card/poker-card.component.html
+++ b/src/app/shared/components/poker-card/poker-card.component.html
@@ -1,6 +1,4 @@
 <div class="container">
   <div class="card"></div>
-  <div class="text">
-    Jesus
-  </div>
+  <div class="text">{{ text }}</div>
 </div>
