--- a/src/app/pages/join-game/join-game.component.scss
+++ b/src/app/pages/join-game/join-game.component.scss
@@ -16,13 +16,13 @@ $height-header: 126px;
     place-content: center;
     height: 100%;
 
-    .roles {
+    .display-modes {
       margin-top: 18px;
       display: flex;
       justify-content: center;
       column-gap: 36px;
 
-      .role {
+      .display-mode {
         display: flex;
         justify-content: center;
         align-items: center;
