--- a/src/app/shared/components/card-selector/card-selector.component.html
+++ b/src/app/shared/components/card-selector/card-selector.component.html
@@ -6,7 +6,7 @@
       <app-poker-card
         [size]="PokerCardSize.Medium"
         [variant]="PokerCardVariant.Picker"
-        [isSelected]="card.id === meUser?.cardId"
+        [isSelected]="card.id === meUser?.cardSelected"
         (click)="handlePokerCard(card.id)"
       >
         @if (card.type === CardSelectorType.Text) {
