--- a/src/app/shared/components/poker-card-list/poker-card-list.component.html
+++ b/src/app/shared/components/poker-card-list/poker-card-list.component.html
@@ -1,12 +1,22 @@
 @for (pokerCard of pokerCards; track pokerCard.id) {
-  <app-poker-card
-    [isVisible]="pokerCard.isVisible"
-    [isSelected]="pokerCard.isSelected"
-  >{{ pokerCard.name}}</app-poker-card>
 
-  <!-- <app-avatar-field
-    text="LU"
-    [variant]="AvatarFieldVariantEnum.TextPurpleLigth"
-    [size]="AvatarFieldSizeEnum.Large"
-  /> -->
+  @if (pokerCard.displayMode === DisplayModeEnum.Player) {
+    <app-poker-card
+      [isVisible]="pokerCard.isVisible"
+      [isSelected]="pokerCard.isSelected"
+    >{{ pokerCard.name}}</app-poker-card>
+  }
+
+  @if (pokerCard.displayMode === DisplayModeEnum.Spectator) {
+    <div class="spectator">
+      <app-avatar-field
+        [text]="pokerCard.name"
+        [variant]="AvatarFieldVariantEnum.TextPurpleLigth"
+        [size]="AvatarFieldSizeEnum.Large"
+      />
+
+      <span>{{ pokerCard.name}}</span>
+    </div>
+  }
+
 }
